@@ -9,6 +9,7 @@ Global.IsAtlfast: FALSE
 Global.Period: p13tev
 Global.cutfile: ZeroLeptonRun2/data/cutfile8TeV.dat
 Global.JetCollectionKey: AntiKt4LCTopoJets
+Global.ElectronContainerKey: ElectronCollection
 Global.JESNuisanceParameterSet: 0
 Global.DerivationTag: p1872
 
@@ -56,6 +57,7 @@ susyobjs.UseSystematics: TRUE
 susyobjs.Period: %{Global.Period}
 susyobjs.IsAtlfast: %{Global.IsAtlfast}
 susyobjs.JESNuisanceParameterSet: %{Global.JESNuisanceParameterSet}
+susyobjs.ElectronContainerKey: %{Global.ElectronContainerKey}
 
 # ---------------------------  Signal Region -----------------
 sr.IsData: %{Global.IsData}
@@ -100,6 +102,7 @@ susyobjsy.PhotonInOR: TRUE
 susyobjsy.suffix: cry
 susyobjsy.UseSystematics: TRUE
 susyobjsy.JESNuisanceParameterSet: %{Global.JESNuisanceParameterSet}
+susyobjsy.ElectronContainerKey: %{Global.ElectronContainerKey}
 
 # ---------------------------  CRY Region -----------------
 cry.IsData: %{Global.IsData}
